Added adaptive input based on the average of the last 20 entries
